<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearConfirmTransaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/id_customer_charged"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edTransactCustomerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:elevation="2dp"
        android:inputType="none"
        android:text="customer_ab32d26f-f396-460e-a2c4-7963543055b4"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/amount"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edTransactAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:editable="false"
        android:elevation="2dp"
        android:maxLength="9"
        android:maxLines="1"
        android:text=""
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/installment_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTransactInstallmentsNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:elevation="2dp"
            android:maxLength="9"
            android:padding="10dp"
            android:text="12"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/id_card"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTransactCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:editable="false"
            android:elevation="2dp"
            android:ems="10"
            android:padding="10dp"
            android:text="card_f7f86f0e-6801-417c-8df0-c25b43918dab"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btConfirmSaleAmountCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/cancel"
            android:textColor="#fafafa" />

        <FrameLayout
            android:layout_width="8dp"
            android:layout_height="match_parent">

        </FrameLayout>

        <Button
            android:id="@+id/btConfirmSaleAmountOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:text="@string/confirm"
            android:textColor="#fafafa" />

    </LinearLayout>

</LinearLayout>
